[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "margarine"
version = "2.0.1"
description = "margarine: Posterior Sampling and Marginal Bayesian Statistics "
readme = "README.md"
authors = [
    {name = "Harry T. J. Bevins", email = "htjb2@cam.ac.uk"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "tfp-nightly",
    "flax",
    "jax",
    "optax",
    "tqdm",
]

classifiers=[
    'Intended Audience :: Science/Research',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Topic :: Scientific/Engineering :: Physics',
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python",
  "mkdocs-include-markdown-plugin",
  "pymdown-extensions",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["margarine*"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select =["E", "F", "W",  # basics
            "I",            # isort
            "D",            # docstrings
            "UP",           # pyupgrade (includes type modernization)
            "ANN",          # type annotations
            ]

[tool.ruff.lint.pydocstyle]
convention = "google"
