[metadata]
name = margarine
# You can either hard‐code your version here or (if you prefer more automation)
# have your package include a __version__ attribute. For now we simply use the value
# that was in your README (:Version: 1.2.8).
version = 1.2.8
description = margarine: Posterior Sampling and Marginal Bayesian Statistics
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Harry T. J. Bevins
author_email = htjb2@cam.ac.uk
url = https://github.com/htjb/margarine
license = MIT
classifiers =
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
install_requires =
    numpy
    tensorflow-macos<2.14.0; sys_platform == "darwin"
    tensorflow<2.14.0; sys_platform != "darwin"
    tensorflow_probability<0.21.0
    anesthetic
    scipy
    scikit-learn
    tqdm
python_requires = >=3.6

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme
    numpydoc

[options.package_data]
* = *.rst, *.txt, LICENSE

[bdist_wheel]
universal = 1
